force-app/main/default/objects/APXTConga4__Conga_Template__c/fields/APXTConga4__Master_Field_to_Set_1__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Master_Field_to_Set_1__c</fullName>
    <description>You may update a field on the master record. The update occurs when the user Logs Activity, either from PointMerge or Mass Merge. 

Enter the API field name, an equals sign, and the value to set (with spaces replaced with plus signs). 

For example: 
Status__c=Completed 

A special case: 
Status_Date__c=Today</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the API field name, an equals sign, and the value to set (with spaces replaced with plus signs). 

Examples: 
Status__c=Completed 
Status_Date__c=Today 
Stage__c=In Progress</inlineHelpText>
    <label>Master Field to Set 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>