force-app/main/default/objects/APXTConga4__Conga_Template__c/fields/APXTConga4__Master_Field_to_Set_2__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Master_Field_to_Set_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Master Field to Set 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>