force-app/main/default/objects/APXTConga4__Conga_Template__c/fields/APXTConga4__Name__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>